--- a/WebApplication1/Areas/coadmin/Views/titulares/editarTitulo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/editarTitulo.cshtml
@@ -116,19 +116,14 @@
                             <div class="form-group row">
                                 <label class="col-sm-3 col-form-label">Comunidad</label>
                                 <div class="col-sm-9">
-                                    <select class="form-control" name="IdCommunity"
+                                    <select class="form-control" required name="IdCommunity"
                                             data-toggle="tooltip" title="Nombre de la comunidad" id="IdCommunity">
-                                        @foreach (var item in Model.communityList)
+                                        @foreach (var item in Model.communityS)
                                         {
-                                            if (Model.titulo.community.id == item.id)
+                                            if (Session["CURRENT_COMU"] == item.id)
                                             {
-                                                <option value="@item.id" selected>@item.first_name</option>
+                                                <option selected value="@item.id">@item.first_name</option>
                                             }
-                                            else
-                                            {
-                                                <option value="@item.id">@item.first_name</option>
-                                            }
-
                                         }
                                     </select>
                                     <small class="form-text text-muted">Lista de comunidades</small>
